welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
override def run() {
}

def marqueSol(){
  baisseBrosse();
  l?veBrosse();
}

def faireV(){
  marqueSol();
  avance();
  gauche();
  avance();
  marqueSol();
  droite();
  avance();
  droite();
  avance();
    
}